<resources>
    <string name="app_name">ExercisesApp</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Exercise Name</string>
    <string name="hint_series">Series</string>
    <string name="hint_reps">Reps</string>
    <string name="hint_weights">Weights (kg)</string>
    <string name="hint_notes">Your own notes</string>
    <string name="hint_date">Date</string>
    <string name="btn_enter">Enter</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_series">Enter right series value (series > 0)</string>
    <string name="err_msg_reps">Enter right reps value (reps > 0)</string>
    <string name="err_msg_weights">Enter right weights value (weights >= 0)</string>

    <string name="infos_text"> "ExercisesApp was modified by Roshan.D , to manage your workouts.
        It is really simple.
        \nADDING EXERCISE\n
        Just choose 'add Exercise' from menu in the bottom and type necessary information about your exercise.
        When you are not using any weights put '0' there. When you want to change exercise's date, click on current date and set right date by choosing it from calendar.
        \nGET EXERCISE'S DETAILS\n
        When you are watching exercises list's page you can click on each exercise and see all informations about it.
        There is also delete button to remove it."
        </string>
    <string name="upload_image">Upload Image</string>

</resources>
